# CppConfigManager

./: .gitignore  CMakeLists.txt  ConfigReaderExample.cpp  CppXMLConfigReader.cpp  CppXMLConfigReader.cpp.backup  CppXMLConfigReader.h  OtherStuff.cpp  OtherStuffExample  README.md  SampleTest.cpp  XMLConfig.cpp  XMLConfig.h  XMLConfigExample.cpp  build  cleanUpObjFiles  sample.xml  test.xml  valgrind.csv
